# PythonPaint

./: main.py  old_app.py  old_main.py  old_presenter.py  presenter.py  presenter_new.py  pyproject.toml
model/: bezier_curve.py  canvas_model.py  color_model.py  ellipse.py  free_draw.py  image.py  line.py  pen.py  point.py  polygon.py  rectangle.py  rectangle_shape.py  shape.py  text.py  triangle.py
old_model/: canvas_model.py  ellipse.py  free_hand.py  line.py  shape.py
presenter/: bezier_curve_dialog_presenter.py  binarization_dialog_presenter.py  color_picker_dialog_presenter.py  dialog_presenter.py  filter_dialog_presenter.py  histogram_dialog_presenter.py  main_presenter.py  morph_dialog_presenter.py  pixel_analysis_presenter.py  polygon_dialog_presenter.py  presenter.py  rgb_transformation_dialog_presenter.py
tests/: test.xcf  test_image_filtering.py
utils/: binary_operation.py  commands.py  container.py  draw_map.py  histogram_operation.py  image_service.py  import_command.py  json_converter.py  pnm_format.py  pnm_importer.py  point_converter.py  tools.py
view/: base_canvas_widget.py  bezier_canvas_widget.py  bezier_curve_dialog.py  bezier_curve_dialog.ui  bezier_curve_dialog_ui.py  binary_dialog.py  binary_dialog.ui  binary_dialog_ui.py  brightness_picker_widget.ui  canvas_widget.py  color_dialog.py  color_gl_widget.py  color_window.ui  color_window_ui.py  cone_gl_widget.py  cube_gl_widget.py  draw_panel_main_window.ui  filter_dialog.py  filter_dialog.ui  filter_dialog_ui.py  histogram_dialog.py  histogram_dialog.ui  histogram_dialog_ui.py  (+18 more)
(+5 files in other folders)
