[project]
name = "pythonpaint"
version = "0.1.0"
description = ""
authors = [
    {name = "Jakub Jakacki",email = "jakub.jakacki18@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyqt6 (>=6.9.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
