[project]
name = "pythonpaint"
version = "0.1.0"
description = ""
authors = [
    {name = "Jakub Jakacki",email = "jakub.jakacki18@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyqt6 (>=6.9.1,<7.0.0)",
    "dependency-injector (>=4.48.2,<5.0.0)",
    "pyopengl (>=3.1.10,<4.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "superqt (>=0.7.6,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
